# application-pipeline

./: .gitignore  2026-05-24T01-42-31Z.md  2026-05-24T01-42-58Z.md  2026-05-24T01-43-14Z.md  CLAUDE.md  CONTEXT.md  README.md  UBIQUITOUS_LANGUAGE.md  crontab.example  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: cron-setup.md  latex.md  miktex-setup.md  pi-setup.md  usage.md
docs/adr/: 0001-claude-cli-as-llm-backend.md  0001-local-ollama-as-llm-backend.md  0001-seen-state-durable-via-syncthing.md  0002-parser-threads-as-pure-producers.md  0002-seen-state-committed-to-git.md  0002-seen-state-durable-via-syncthing.md  0003-dedup-alias-on-tuple-match.md  0003-failures-as-syncthing-files.md  0003-match-tier-judged-by-llm.md  0003-user-settings-and-paths-anchored-to-data-dir.md  0004-dedup-alias-on-tuple-match.md  0004-layout-as-user-editable-python-module.md  0004-parser-threads-as-pure-producers.md  0004-user-settings-and-paths-anchored-to-data-dir.md  0005-domain-prefilter-gates-llm.md  0005-layout-as-user-editable-python-module.md  0005-parser-location-resolution-policy.md  0005-parser-threads-as-pure-producers.md  0005-seen-result-three-variant.md  0005-tag-wrapped-agent-output-protocol.md  0006-no-dedup-discover-early-stop.md  0006-orchestrator-queue-topology.md  0006-per-language-prompt-files.md  0006-seen-result-three-variant.md  0006-tag-wrapped-agent-output-protocol.md  0007-failures-as-syncthing-files.md  0007-log-convention-components-by-layer.md  0007-orchestrator-queue-topology.md  0007-parser-threads-as-pure-producers.md  0008-log-convention-components-by-layer.md  0008-pi-pulls-tags-state-via-syncthing.md  0008-prefilter-pure-title-only-blacklist.md  0008-seen-result-three-variant.md  0008-user-settings-and-paths-anchored-to-data-dir.md  0009-atomic-deploy-via-staging-symlink.md  0009-orchestrator-queue-topology.md  0009-parser-location-resolution-policy.md  0009-prefilter-pure-title-only-blacklist.md  0010-claude-cli-pinned-model-and-tag-wrapped-output.md  0010-failures-as-syncthing-files.md  (+170 more)
docs/agents/: triage-labels.md
results/: current.md
scripts/: pi-tick.sh
settings/: layout.py
src/application_pipeline/: __init__.py  __main__.py  _context.py  atomic_write.py  classify_stage.py  compile_cv_cmd.py  compile_cv_local.py  content_gate.py  cv_slot_contract.py  (+26 more)
tests/: conftest.py  fake_status_display.py  parser_intake_harness.py  test_agent_output.py  test_agent_runtime_extractor.py  test_agent_runtime_invocation.py  test_atomic_write.py  test_bundesagentur_parser.py  test_card_store.py  test_classify_stage.py  test_classify_stage_architecture.py  test_claude_cli_invoker.py  test_claude_extractor.py  test_claude_extractor_v2.py  test_cli_dispatch.py  test_compile_cv_cmd.py  test_compile_cv_local.py  test_compile_cv_smoke.py  test_component_log.py  test_config_loader.py  test_content_gate.py  test_content_pool_parser.py  test_cover_patterns.py  test_cron_scripts.py  test_cv_slot_contract.py  test_daily_results_file.py  test_debug_log.py  test_dedup_counters.py  test_dedup_store.py  test_extract_store.py  test_facts_consolidation.py  test_failure_report.py  test_freshness.py  test_freshness_gate.py  test_gates_bundle.py  test_http_retry.py  test_http_retry_primitive.py  test_init_cmd.py  test_language.py  test_latex_templates.py  (+44 more)
(+159 files in other folders)
