[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "application-pipeline"
version = "0.1.0"
requires-python = ">=3.11.3"
dependencies = [
    "beautifulsoup4",
    "httpx ~= 0.27",
    "langdetect",
    "python-dotenv",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "respx",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"application_pipeline.templates.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not smoke'"
markers = [
    "smoke: live-network smoke tests (deselected by default; run with -m smoke)",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = "langdetect.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fake_status_display"
ignore_missing_imports = true
