[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "application-pipeline"
dynamic = ["version"]
requires-python = ">=3.11.3"
dependencies = [
    "beautifulsoup4",
    "httpx ~= 0.27",
    "python-dotenv",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "respx",
    "ruff",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"application_pipeline.templates.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not smoke'"
markers = [
    "smoke: live-network smoke tests (deselected by default; run with -m smoke)",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fake_status_display"
ignore_missing_imports = true
