[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "application-pipeline"
dynamic = ["version"]
requires-python = ">=3.11.3"
dependencies = [
    "beautifulsoup4",
    "httpx ~= 0.27",
    "trafilatura",
    "python-dotenv",
    "rich",
]

[project.scripts]
application-pipeline = "application_pipeline.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "respx",
    "ruff",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"application_pipeline.templates.prompts" = ["*.md"]
"application_pipeline.latex" = ["*.tex", "*.cls", "*.sty", "*.md"]
"application_pipeline.templates.user-info" = ["*", "triage-profile/*"]
"application_pipeline.templates.setup" = ["*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not smoke'"
markers = [
    "smoke: live-network smoke tests (deselected by default; run with -m smoke)",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "trafilatura"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fake_status_display"
ignore_missing_imports = true
